# py_database_wrapper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: master.yml
docker/app/: Dockerfile
docker/app/scripts/: bashrc.bash  build.bash  code_tests.bash  run.bash
scripts/: bump_version.bash  git_pre_commit.bash  update_commit_info.bash
src/database_wrapper/: README.md  pyproject.toml
src/database_wrapper/database_wrapper/: __init__.py  abc.py  config.py  db_backend.py  db_data_model.py  db_wrapper.py  db_wrapper_async.py  db_wrapper_interface.py  db_wrapper_mixin.py  serialization.py
src/database_wrapper/database_wrapper/utils/: timer.py
src/database_wrapper_mssql/: README.md  pyproject.toml
src/database_wrapper_mssql/database_wrapper_mssql/: __init__.py  connector.py  db_wrapper_mssql.py
src/database_wrapper_mysql/: README.md  pyproject.toml
src/database_wrapper_mysql/database_wrapper_mysql/: __init__.py  connector.py  db_wrapper_mysql.py
src/database_wrapper_pgsql/: README.md  pyproject.toml
src/database_wrapper_pgsql/database_wrapper_pgsql/: __init__.py  connector.py  db_wrapper_pgsql.py  db_wrapper_pgsql_async.py  db_wrapper_pgsql_mixin.py
src/database_wrapper_redis/: README.md  pyproject.toml
src/database_wrapper_redis/database_wrapper_redis/: connector.py
src/database_wrapper_sqlite/: README.md  pyproject.toml
src/database_wrapper_sqlite/database_wrapper_sqlite/: __init__.py
src/db_wrap/: pyproject.toml
src/db_wrap/db_wrap/: config.py
src/db_wrap_mssql/: pyproject.toml
src/db_wrap_mssql/db_wrap_mssql/: __init__.py
src/db_wrap_mysql/: pyproject.toml
src/db_wrap_mysql/db_wrap_mysql/: __init__.py  db_wrapper_mysql.py
src/db_wrap_pgsql/: pyproject.toml
src/db_wrap_pgsql/db_wrap_pgsql/: connector.py  db_wrapper_pgsql.py
src/db_wrap_sqlite/: pyproject.toml
src/db_wrapper/: README.md  pyproject.toml
src/db_wrapper/db_wrapper/: __init__.py  config.py  db_backend.py  db_data_model.py  db_wrapper.py
src/db_wrapper/db_wrapper/utils/: __init__.py  return_model.py
src/db_wrapper_mssql/: pyproject.toml
src/db_wrapper_mssql/db_wrapper_mssql/: __init__.py  connector.py  db_wrapper_mssql.py
src/db_wrapper_mysql/: pyproject.toml
src/db_wrapper_mysql/db_wrapper_mysql/: __init__.py  connector.py  db_wrapper_mysql.py
src/db_wrapper_pgsql/: pyproject.toml
src/db_wrapper_pgsql/db_wrapper_pgsql/: __init__.py  connector.py  db_wrapper_pgsql.py
src/db_wrapper_sqlite/: pyproject.toml
src/tests/: test_mssql.py  test_mysql.py  test_pgsql.py  test_redis.py  test_sqlite.py
