[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = [
    "src/db_wrap"
]

[tool.mypy]
files = [
    "src/db_wrap/db_wrap",
    "src/db_wrap/db_wrap_pgsql",
    "src/db_wrap/db_wrap_mysql",
    "src/db_wrap/db_wrap_mssql",
    "src/db_wrap/db_wrap_sqlite",
]
warn_unused_ignores = true
show_error_codes = true
strict = true

[tool.codespell]
ignore-words-list = "alot,ans,ba,fo,te,erro,varning"
skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_psycopg.c,*.html"
