[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
source = [
    "src/database_wrapper"
]

[tool.mypy]
files = [
    "src/database_wrapper/database_wrapper",
    "src/database_wrapper/database_wrapper_pgsql",
    "src/database_wrapper/database_wrapper_mysql",
    "src/database_wrapper/database_wrapper_mssql",
    "src/database_wrapper/database_wrapper_sqlite",
]
warn_unused_ignores = true
show_error_codes = true
strict = true

[tool.codespell]
ignore-words-list = "alot,ans,ba,fo,te,erro,varning"
skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_psycopg.c,*.html"
